force-app/main/default/objects/PO_Stage__c/PO_Stage__c.object-meta.xml
<CustomObject>
    <description>SOX object - This object stores the Distributor PO received via EDI/Glynt</description>
    <label>Stage PO</label>
    <nameField>
        <label>PO Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stage PO</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>