force-app/main/default/objects/PO_Stage__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(DEPRECATED) Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Stage PO</relationshipLabel>
    <relationshipName>Stage_PO</relationshipName>
    <type>Lookup</type>
</CustomField>