force-app/main/default/objects/PO_Stage__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <formula>Opportunity__r.ETM_Area__c</formula>
    <label>Area</label>
    <type>Text</type>
</CustomField>