force-app/main/default/objects/PO_Stage__c/fields/Bill_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill_To_Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Stage PO (Bill_To_Name)</relationshipLabel>
    <relationshipName>Stage_PO1</relationshipName>
    <type>Lookup</type>
</CustomField>