force-app/main/default/objects/PO_Stage__c/fields/Bill_To_Name_Str__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Name_Str__c</fullName>
    <formula>Bill_To_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Name</label>
    <type>Text</type>
</CustomField>