force-app/main/default/objects/PO_Stage__c/fields/BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>BillingCountry__c</fullName>
    <label>BillingCountry</label>
    <length>80</length>
    <type>Text</type>
</CustomField>