force-app/main/default/objects/PO_Stage__c/fields/BillingCountryCode__c.field-meta.xml
<CustomField>
    <fullName>BillingCountryCode__c</fullName>
    <label>BillingCountryCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>