force-app/main/default/objects/PO_Stage__c/fields/BillingStateCode__c.field-meta.xml
<CustomField>
    <fullName>BillingStateCode__c</fullName>
    <label>BillingStateCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>