force-app/main/default/objects/PO_Stage__c/fields/BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>BillingStreet__c</fullName>
    <label>BillingStreet</label>
    <type>TextArea</type>
</CustomField>