force-app/main/default/objects/PO_Stage__c/fields/Carrier_Identification_Code__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Identification_Code__c</fullName>
    <label>Carrier Identification Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>