force-app/main/default/objects/PO_Stage__c/fields/CM_Error__c.field-meta.xml
<CustomField>
    <fullName>CM_Error__c</fullName>
    <label>CM Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>