force-app/main/default/objects/PO_Stage__c/fields/CM_Value_From_Glynt__c.field-meta.xml
<CustomField>
    <fullName>CM_Value_From_Glynt__c</fullName>
    <description>Field is created to map with glynt to extract to populate the value to ContractManufacturer Field.</description>
    <label>CM Value From Glynt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>