force-app/main/default/objects/PO_Stage__c/fields/Consult_Splitted__c.field-meta.xml
<CustomField>
    <fullName>Consult_Splitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consult Splitted</label>
    <type>Checkbox</type>
</CustomField>