force-app/main/default/objects/PO_Stage__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Stage PO</relationshipLabel>
    <relationshipName>Stage_PO</relationshipName>
    <type>Lookup</type>
</CustomField>