force-app/main/default/objects/PO_Stage__c/fields/Currency_Identifier_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Identifier_Code__c</fullName>
    <label>Currency Identifier Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>