force-app/main/default/objects/PO_Stage__c/fields/Customer_Requested_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Requested_Ship_Date__c</fullName>
    <label>Customer Requested Ship Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>