force-app/main/default/objects/PO_Stage__c/fields/Date_Qualifier__c.field-meta.xml
<CustomField>
    <fullName>Date_Qualifier__c</fullName>
    <label>Date Qualifier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>