force-app/main/default/objects/PO_Stage__c/fields/Deliver_By__c.field-meta.xml
<CustomField>
    <fullName>Deliver_By__c</fullName>
    <label>Est Delivery Date</label>
    <type>Date</type>
</CustomField>