force-app/main/default/objects/PO_Stage__c/fields/DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Number__c</fullName>
    <label>DUNS Number</label>
    <type>TextArea</type>
</CustomField>