force-app/main/default/objects/PO_Stage__c/fields/EDI_DISTI_ID__c.field-meta.xml
<CustomField>
    <fullName>EDI_DISTI_ID__c</fullName>
    <label>EDI DISTI ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>