force-app/main/default/objects/PO_Stage__c/fields/EDI_Sync_DateTime__c.field-meta.xml
<CustomField>
    <fullName>EDI_Sync_DateTime__c</fullName>
    <label>EDI Sync DateTime</label>
    <type>DateTime</type>
</CustomField>