force-app/main/default/objects/PO_Stage__c/fields/EDI_Sync_Message__c.field-meta.xml
<CustomField>
    <fullName>EDI_Sync_Message__c</fullName>
    <label>EDI Sync Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>