force-app/main/default/objects/PO_Stage__c/fields/EDI_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>EDI_Sync_Status__c</fullName>
    <label>EDI Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>