force-app/main/default/objects/PO_Stage__c/fields/Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent__c</fullName>
    <label>Email Sent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Not Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>