force-app/main/default/objects/PO_Stage__c/fields/End_User_PO__c.field-meta.xml
<CustomField>
    <fullName>End_User_PO__c</fullName>
    <label>End_User_PO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>