force-app/main/default/objects/PO_Stage__c/fields/Est_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Est_Ship_Date__c</fullName>
    <label>Est_Ship_Date</label>
    <type>Date</type>
</CustomField>