force-app/main/default/objects/PO_Stage__c/fields/Expected_number_of_POs__c.field-meta.xml
<CustomField>
    <fullName>Expected_number_of_POs__c</fullName>
    <label>Expected number of POs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>