force-app/main/default/objects/PO_Stage__c/fields/Group_Ext_ID__c.field-meta.xml
<CustomField>
    <fullName>Group_Ext_ID__c</fullName>
    <externalId>true</externalId>
    <label>Group Ext ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>