force-app/main/default/objects/PO_Stage__c/fields/Hardware_PO_Id__c.field-meta.xml
<CustomField>
    <fullName>Hardware_PO_Id__c</fullName>
    <description>Holds the stage po id that contains its related hardware product</description>
    <label>Hardware PO Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>