force-app/main/default/objects/PO_Stage__c/fields/Identification_Code_Qualifier__c.field-meta.xml
<CustomField>
    <fullName>Identification_Code_Qualifier__c</fullName>
    <label>Identification Code Qualifier</label>
    <length>10</length>
    <type>Text</type>
</CustomField>