force-app/main/default/objects/PO_Stage__c/fields/IsQuotePrimary__c.field-meta.xml
<CustomField>
    <fullName>IsQuotePrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsQuotePrimary</label>
    <type>Checkbox</type>
</CustomField>