force-app/main/default/objects/PO_Stage__c/fields/LineCount__c.field-meta.xml
<CustomField>
    <fullName>LineCount__c</fullName>
    <label>LineCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>