force-app/main/default/objects/PO_Stage__c/fields/Non_Primary_Quote_PO__c.field-meta.xml
<CustomField>
    <fullName>Non_Primary_Quote_PO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Primary Quote PO</label>
    <type>Checkbox</type>
</CustomField>