force-app/main/default/objects/PO_Stage__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>