force-app/main/default/objects/PO_Stage__c/fields/Note_on_Contingency_and_Special_Language__c.field-meta.xml
<CustomField>
    <fullName>Note_on_Contingency_and_Special_Language__c</fullName>
    <label>Note on Contingency and Special Language</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>