force-app/main/default/objects/PO_Stage__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Stage PO</relationshipLabel>
    <relationshipName>Stage_PO</relationshipName>
    <type>Lookup</type>
</CustomField>