force-app/main/default/objects/PO_Stage__c/fields/Opportunity_Link__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Link__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))&amp;Quote__r.SBQQ__Opportunity2__c, Quote__r.SBQQ__Opportunity2__r.Name, &apos;_blank&apos;)</formula>
    <label>Opportunity Link</label>
    <type>Text</type>
</CustomField>