force-app/main/default/objects/PO_Stage__c/fields/Opportunity_Owner_LK__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_LK__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stage_PO</relationshipName>
    <type>Lookup</type>
</CustomField>