force-app/main/default/objects/PO_Stage__c/fields/Opportunity_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Name__c</fullName>
    <formula>Quote__r.SBQQ__Opportunity2__r.Owner.FirstName +&apos; &apos;+ Quote__r.SBQQ__Opportunity2__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner Name</label>
    <type>Text</type>
</CustomField>