force-app/main/default/objects/PO_Stage__c/fields/Order_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Order_Account_Name__c</fullName>
    <formula>Ship_to_Account_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order_Account_Name</label>
    <type>Text</type>
</CustomField>