force-app/main/default/objects/PO_Stage__c/fields/Pack_Note__c.field-meta.xml
<CustomField>
    <fullName>Pack_Note__c</fullName>
    <description>N9?[N901 = L1 &amp; (N902 =‘PACK NOTES’]MSG/MSG01 from Arrow PO</description>
    <label>Pack Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>