force-app/main/default/objects/PO_Stage__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Stage PO (Partner Name)</relationshipLabel>
    <relationshipName>Stage_PO3</relationshipName>
    <type>Lookup</type>
</CustomField>