force-app/main/default/objects/PO_Stage__c/fields/Partner_Email__c.field-meta.xml
<CustomField>
    <fullName>Partner_Email__c</fullName>
    <label>Partner Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>