force-app/main/default/objects/PO_Stage__c/fields/Partner_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Partner_PO_Number__c</fullName>
    <label>Partner PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>