force-app/main/default/objects/PO_Stage__c/fields/Partner_Service_Level__c.field-meta.xml
<CustomField>
    <fullName>Partner_Service_Level__c</fullName>
    <label>Partner Service Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>