force-app/main/default/objects/PO_Stage__c/fields/Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule__c</fullName>
    <label>Payment Schedule</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>