force-app/main/default/objects/PO_Stage__c/fields/Payment_schedule_type__c.field-meta.xml
<CustomField>
    <fullName>Payment_schedule_type__c</fullName>
    <label>Payment schedule type</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>