force-app/main/default/objects/PO_Stage__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <description>FOB/[FOB03 = TP] from Arrow PO</description>
    <label>Payment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>