force-app/main/default/objects/PO_Stage__c/fields/Pdf_Address__c.field-meta.xml
<CustomField>
    <fullName>Pdf_Address__c</fullName>
    <description>Field To Store the address.</description>
    <label>Pdf Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>