force-app/main/default/objects/PO_Stage__c/fields/PO_Index__c.field-meta.xml
<CustomField>
    <fullName>PO_Index__c</fullName>
    <label>PO Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>