force-app/main/default/objects/PO_Stage__c/fields/PO_Internal_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>PO_Internal_Validation_Status__c</fullName>
    <label>PO Internal Validation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Internal Failure</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>