force-app/main/default/objects/PO_Stage__c/fields/PO_Quote_Validated__c.field-meta.xml
<CustomField>
    <fullName>PO_Quote_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO Quote Validated</label>
    <type>Checkbox</type>
</CustomField>