force-app/main/default/objects/PO_Stage__c/fields/PO_Received__c.field-meta.xml
<CustomField>
    <fullName>PO_Received__c</fullName>
    <formula>if(POItem_Count__c ==  LineCount__c, true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Received</label>
    <type>Checkbox</type>
</CustomField>