force-app/main/default/objects/PO_Stage__c/fields/PO_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>PO_Validation_Status__c</fullName>
    <label>PO Validation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Staged</fullName>
            </value>
            <value>
                <fullName>Success - 855 Sent</fullName>
            </value>
            <value>
                <fullName>Failure - 855 Sent</fullName>
            </value>
            <value>
                <fullName>Order Accepted</fullName>
            </value>
            <value>
                <fullName>Order Rejected</fullName>
            </value>
            <value>
                <fullName>Order Accepted - 855 Sent</fullName>
            </value>
            <value>
                <fullName>Order Rejected - 855 Sent</fullName>
            </value>
            <value>
                <fullName>Internal Failure</fullName>
            </value>
            <value>
                <fullName>Data Validation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>