force-app/main/default/objects/PO_Stage__c/fields/PO_Validation_Status_Description__c.field-meta.xml
<CustomField>
    <fullName>PO_Validation_Status_Description__c</fullName>
    <label>PO Validation Status Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>