force-app/main/default/objects/PO_Stage__c/fields/PoDate__c.field-meta.xml
<CustomField>
    <fullName>PoDate__c</fullName>
    <label>PoDate</label>
    <type>Date</type>
</CustomField>