force-app/main/default/objects/PO_Stage__c/fields/POItem_Count__c.field-meta.xml
<CustomField>
    <fullName>POItem_Count__c</fullName>
    <label>POItem Count</label>
    <summaryForeignKey>PO_Item_Stage__c.Stage_PO__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>