force-app/main/default/objects/PO_Stage__c/fields/PoNumber__c.field-meta.xml
<CustomField>
    <fullName>PoNumber__c</fullName>
    <label>PoNumber</label>
    <length>80</length>
    <type>Text</type>
</CustomField>