force-app/main/default/objects/PO_Stage__c/fields/POReceived__c.field-meta.xml
<CustomField>
    <fullName>POReceived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POReceived</label>
    <type>Checkbox</type>
</CustomField>