force-app/main/default/objects/PO_Stage__c/fields/Purchase_Order_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Type_Code__c</fullName>
    <label>Purchase Order Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
            </value>
            <value>
                <fullName>CF</fullName>
            </value>
            <value>
                <fullName>DS</fullName>
            </value>
            <value>
                <fullName>NE</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>ZZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>