force-app/main/default/objects/PO_Stage__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Stage PO</relationshipLabel>
    <relationshipName>Stage_PO</relationshipName>
    <type>Lookup</type>
</CustomField>