force-app/main/default/objects/PO_Stage__c/fields/Quote_Link__c.field-meta.xml
<CustomField>
    <fullName>Quote_Link__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))&amp;Quote__c , Quote__r.Name, &apos;_blank&apos;)</formula>
    <label>Quote Link</label>
    <type>Text</type>
</CustomField>