force-app/main/default/objects/PO_Stage__c/fields/Quote_number__c.field-meta.xml
<CustomField>
    <fullName>Quote_number__c</fullName>
    <label>Quote #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>