force-app/main/default/objects/PO_Stage__c/fields/Quote_Release_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Release_Number__c</fullName>
    <description>Information from REF? [REF01=R1]REF02 in Arrow PO</description>
    <label>Quote Release Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>