force-app/main/default/objects/PO_Stage__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>Opportunity__r.ETM_Region__c</formula>
    <label>Region</label>
    <type>Text</type>
</CustomField>