force-app/main/default/objects/PO_Stage__c/fields/Routing__c.field-meta.xml
<CustomField>
    <fullName>Routing__c</fullName>
    <label>Routing</label>
    <type>TextArea</type>
</CustomField>