force-app/main/default/objects/PO_Stage__c/fields/Service_Level__c.field-meta.xml
<CustomField>
    <fullName>Service_Level__c</fullName>
    <label>Service Level</label>
    <type>TextArea</type>
</CustomField>