force-app/main/default/objects/PO_Stage__c/fields/Ship_to_Account_name__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Account_name__c</fullName>
    <label>Ship_To_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>