force-app/main/default/objects/PO_Stage__c/fields/Ship_To_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Contact_Name__c</fullName>
    <label>Ship To Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>