force-app/main/default/objects/PO_Stage__c/fields/Ship_to_Email__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Email__c</fullName>
    <label>Ship_to_Email</label>
    <type>Email</type>
</CustomField>