force-app/main/default/objects/PO_Stage__c/fields/Ship_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(DEPRECATED) Ship_To_Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Stage PO (Ship_To_Name)</relationshipLabel>
    <relationshipName>Stage_PO2</relationshipName>
    <type>Lookup</type>
</CustomField>