force-app/main/default/objects/PO_Stage__c/fields/Ship_To_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Phone_Number__c</fullName>
    <label>Ship_To_Phone_Number</label>
    <type>Phone</type>
</CustomField>