force-app/main/default/objects/PO_Stage__c/fields/Shipment_Method_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Method_of_Payment__c</fullName>
    <label>Shipment Method of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>DF</fullName>
            </value>
            <value>
                <fullName>PP</fullName>
            </value>
            <value>
                <fullName>ZZ</fullName>
            </value>
            <value>
                <fullName>TP</fullName>
            </value>
            <value>
                <fullName>PC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>