force-app/main/default/objects/PO_Stage__c/fields/Shipment_Note__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Note__c</fullName>
    <description>N9?[N901 = L1 &amp; (N902 = ‘SHIP NOTES’]MSG/MSG01 from Arrow PO</description>
    <label>Shipment Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>