force-app/main/default/objects/PO_Stage__c/fields/Shipping_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Account_Number__c</fullName>
    <label>Shipping_Account_Number</label>
    <type>TextArea</type>
</CustomField>