force-app/main/default/objects/PO_Stage__c/fields/Shipping_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Carrier__c</fullName>
    <label>Shipping_Carrier</label>
    <type>TextArea</type>
</CustomField>