force-app/main/default/objects/PO_Stage__c/fields/ShippingCountry__c.field-meta.xml
<CustomField>
    <fullName>ShippingCountry__c</fullName>
    <label>ShippingCountry</label>
    <length>80</length>
    <type>Text</type>
</CustomField>