force-app/main/default/objects/PO_Stage__c/fields/ShippingCountryCode__c.field-meta.xml
<CustomField>
    <fullName>ShippingCountryCode__c</fullName>
    <label>ShippingCountryCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>