force-app/main/default/objects/PO_Stage__c/fields/ShippingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ShippingPostalCode__c</fullName>
    <label>ShippingPostalCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>