force-app/main/default/objects/PO_Stage__c/fields/ShippingState__c.field-meta.xml
<CustomField>
    <fullName>ShippingState__c</fullName>
    <label>ShippingState</label>
    <length>80</length>
    <type>Text</type>
</CustomField>