force-app/main/default/objects/PO_Stage__c/fields/ShippingStateCode__c.field-meta.xml
<CustomField>
    <fullName>ShippingStateCode__c</fullName>
    <label>ShippingStateCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>