force-app/main/default/objects/PO_Stage__c/fields/ShippingStreet__c.field-meta.xml
<CustomField>
    <fullName>ShippingStreet__c</fullName>
    <label>ShippingStreet</label>
    <type>TextArea</type>
</CustomField>