force-app/main/default/objects/PO_Stage__c/fields/Stage_PO_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_PO_Date__c</fullName>
    <label>Stage PO Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>