force-app/main/default/objects/PO_Stage__c/fields/Stage_Total_Amount_Text__c.field-meta.xml
<CustomField>
    <fullName>Stage_Total_Amount_Text__c</fullName>
    <label>Stage Total Amount Text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>