force-app/main/default/objects/PO_Stage__c/fields/Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>Sub_Region__c</fullName>
    <formula>Opportunity__r.ETM_Territory__c</formula>
    <label>Sub Region</label>
    <type>Text</type>
</CustomField>