force-app/main/default/objects/PO_Stage__c/fields/Terms_Basis_Date_Code__c.field-meta.xml
<CustomField>
    <fullName>Terms_Basis_Date_Code__c</fullName>
    <label>Terms Basis Date Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>