force-app/main/default/objects/PO_Stage__c/fields/Terms_Net_Days__c.field-meta.xml
<CustomField>
    <fullName>Terms_Net_Days__c</fullName>
    <label>Terms Net Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>