force-app/main/default/objects/PO_Stage__c/fields/Theatre__c.field-meta.xml
<CustomField>
    <fullName>Theatre__c</fullName>
    <formula>Opportunity__r.ETM_Theatre__c</formula>
    <label>Theatre</label>
    <type>Text</type>
</CustomField>