force-app/main/default/objects/PO_Stage__c/fields/ThirdPartyReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartyReferenceNumber__c</fullName>
    <externalId>true</externalId>
    <label>ThirdPartyReferenceNumber</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>