force-app/main/default/objects/PO_Stage__c/fields/ThirdPartyReferenceText1__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartyReferenceText1__c</fullName>
    <label>ThirdPartyReferenceText1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>