force-app/main/default/objects/PO_Stage__c/fields/ThirdPartyReferenceText2__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartyReferenceText2__c</fullName>
    <label>ThirdPartyReferenceText2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>