force-app/main/default/objects/PO_Stage__c/fields/ThirdPartyReferenceText3__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartyReferenceText3__c</fullName>
    <label>ThirdPartyReferenceText3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>