force-app/main/default/objects/PO_Stage__c/fields/Total_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Item_Count__c</fullName>
    <label>Total Item Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>