force-app/main/default/objects/PO_Stage__c/fields/Tracking_No__c.field-meta.xml
<CustomField>
    <fullName>Tracking_No__c</fullName>
    <label>Tracking_No</label>
    <type>TextArea</type>
</CustomField>