force-app/main/default/objects/PO_Stage__c/fields/Transaction_Set_Control_Number__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Set_Control_Number__c</fullName>
    <label>Transaction Set Control Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>